manifests/dashboard/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: beacon
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: dashboard
          image: ghcr.io/sverdejot/beacon/dashboard:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 4321
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 4321
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4321
            initialDelaySeconds: 15
            periodSeconds: 20
