manifests/dashboard/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: beacon
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: http
      port: 80
      targetPort: 4321
      protocol: TCP
