manifests/dashboard/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  labels:
    app: dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - beacon.sverdejot.dev
      secretName: beacon-tls
  rules:
    - host: beacon.sverdejot.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8081
          - path: /sse
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8081
